RESOLVED FIXED66366
[EFL] Private function _ewk_view_viewport_attributes_compute takes an internal data of ewk_view.
https://bugs.webkit.org/show_bug.cgi?id=66366
Summary [EFL] Private function _ewk_view_viewport_attributes_compute takes an interna...
Grzegorz Czajkowski
Reported 2011-08-17 02:31:48 PDT
Passes to _ewk_view_viewport_attributes_compute an internal data of ewk_view instead of the view object. Adds to ewk_view_viewport_attributes_get NULL checking to avoid unexpected results since this is API.
Attachments
proposed patch (2.23 KB, patch)
2011-08-17 02:32 PDT, Grzegorz Czajkowski
no flags
updated patch to a new coding style of WebKit-EFL (2.37 KB, patch)
2011-10-21 06:53 PDT, Grzegorz Czajkowski
rniwa: review+
followed Ryosuke's suggestions (2.28 KB, patch)
2011-10-26 01:13 PDT, Grzegorz Czajkowski
no flags
Grzegorz Czajkowski
Comment 1 2011-08-17 02:32:31 PDT
Created attachment 104160 [details] proposed patch
Gyuyoung Kim
Comment 2 2011-08-17 03:06:36 PDT
Comment on attachment 104160 [details] proposed patch LGTM
Leandro Pereira
Comment 3 2011-08-17 07:10:59 PDT
Comment on attachment 104160 [details] proposed patch Informal r+.
Grzegorz Czajkowski
Comment 4 2011-10-21 06:53:10 PDT
Created attachment 111960 [details] updated patch to a new coding style of WebKit-EFL
Ryosuke Niwa
Comment 5 2011-10-26 00:33:03 PDT
Comment on attachment 111960 [details] updated patch to a new coding style of WebKit-EFL View in context: https://bugs.webkit.org/attachment.cgi?id=111960&action=review > Source/WebKit/efl/ChangeLog:9 > + Passes to _ewk_view_viewport_attributes_compute an internal > + data of ewk_view instead of the view object. This can fit in one line. > Source/WebKit/efl/ChangeLog:11 > + Adds to ewk_view_viewport_attributes_get NULL checks to > + avoid unexpected results since this is API. Ditto.
Grzegorz Czajkowski
Comment 6 2011-10-26 01:13:38 PDT
Created attachment 112466 [details] followed Ryosuke's suggestions
WebKit Review Bot
Comment 7 2011-10-26 01:26:52 PDT
Comment on attachment 112466 [details] followed Ryosuke's suggestions Clearing flags on attachment: 112466 Committed r98446: <http://trac.webkit.org/changeset/98446>
WebKit Review Bot
Comment 8 2011-10-26 01:26:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.