[EFL] Private function _ewk_view_viewport_attributes_compute takes an internal data of ewk_view. https://bugs.webkit.org/show_bug.cgi?id=66366

Patch by Grzegorz Czajkowski <g.czajkowski@samsung.com> on 2011-10-26
Reviewed by Ryosuke Niwa.

Passes to _ewk_view_viewport_attributes_compute an internal data of ewk_view instead of the view object.
Adds to ewk_view_viewport_attributes_get NULL checks to avoid unexpected results since this is API.

* ewk/ewk_view.cpp:
(_ewk_view_viewport_attributes_compute):
(ewk_view_viewport_attributes_get):

Canonical link: https://commits.webkit.org/87102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98446 268f45cc-cd09-0410-ab3c-d52691b4dbfc